Refactor oracle and calls
This is great, now we just get a real oracle function, it handles its
own random key generation. This is way better for trying to do the next
bit - manipulating an encrypted message using an oracle.

--- a/challenge_12/Cargo.toml
+++ b/challenge_12/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 [dependencies]
 challenge_10 = { path = "../challenge_10" }
 challenge_11 = { path = "../challenge_11" }
+lazy_static = "1.2.0"
